fixed calculator distortion issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 .calculator{
     color:rgb(60, 19, 112);
     text-align: left;
-    background-color: rgb(21, 22, 26);
+    background-color: rgb(28, 31, 20);
     border-style: double;
     border-width: 5px;
     border-radius: 10px;
     padding:5px;
-    margin: 25px 600px 25px 600px;
+    margin: 25px 1200px 25px 5px;
+    width:220px
 }
+
 
 .board{
     background-color: rgb(26, 20, 34);
@@ -74,35 +76,7 @@
     font-family: Gotham Rounded, 'Franklin Gothic Medium';
 }
 
-.clock{
-    width:300px;
-    height: 300px;
-    background-color: rgba(196, 196, 196, .8);
-    color:#f0595f;
-    border-radius: 50%;
-    border: 2px solid black;
-    margin: 25px 600px 25px 600px;
-}
 
-.clock.number{
-    --rotation: 0;
-    width: 100%;
-    height: 100%;
-    text-align: end;
-    transform: rotate(var(--rotation));
-}
-
-.clock.number1{--rotation:30deg; }
-.clock.number2{--rotation:60deg; }
-.clock.number3{--rotation:90deg; }
-.clock.number4{--rotation:120deg; }
-.clock.number5{--rotation:150deg; }
-.clock.number6{--rotation:180deg; }
-.clock.number7{--rotation:210deg; }
-.clock.number8{--rotation:240deg; }
-.clock.number9{--rotation:270deg; }
-.clock.number10{--rotation:300deg; }
-.clock.number11{--rotation:330deg; }
   
 
     
